--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="port.css">
 </head>
 <body>
-    
+    <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="aboutme.html">About-Me</a>
+        <a href="contact.html">Connect</a>
+    </div>
 </body>
+    <div class="container">
+        <div class="avatar-section">
+            <img class="avatar" src="avatar.jpg" alt="Avatar">
+        </div>
+        <div class="info-section">
+            <h1>Welcome to My Portfolio!</h1>
+            <h2>I am Samrath Thukral</h2>
+            <p>I am pursuing<strong> B.Tech in Computer Science Engineering</strong></p>
+            <p>Specialising in <strong>Artificial Intelligence and Machine Learning</strong></p>
+        </div>
+       
 </html>
