--- a/contact.html
+++ b/contact.html
@@ -13,17 +13,19 @@
         <a href="contact.html">Connect</a>
     </div>
     <h1>Contact Me</h1>
-  <div style="float:left;">
+  <div>
      <img src="qr1.jpg" class="qr-c">
-     <a class="links" href="" style="color: rgb(17, 12, 151);" ><b><u>LinkedIn</u></b></p>
+     <a class="links" href="https://www.linkedin.com/in/samrath-thukral-625b001b9?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
+     target="_blank" style="color: rgb(17, 12, 151);" ><b><u>LinkedIn</u></b></p>
    </div>
-   <div style="float:right;margin-left:90px;">
+   <div>
         <img src="qr1.jpg" class="qr-c">
-        <a class="links" href="" style="color: rgb(25, 95, 13);"><b><u>Github</u></b></p>
+        <a class="links" href="https://github.com/samrathos" target="_blank" style="color: rgb(25, 95, 13);"><b><u>Github</u></b></p>
     </div>
-   <div style="float:left;margin-left: 500px;">
+   <div>
         <img src="qr1.jpg" class="qr-c">
-        <a class="links" href="" style="color: rgb(139, 10, 190);"><b><u>Instagram</u></b></p>
+        <a class="links" href="https://www.instagram.com/samrathukral/" 
+        target="_blank" style="color: rgb(139, 10, 190);"><b><u>Instagram</u></b></p>
     </div>
     
     
