--- a/aboutme.html
+++ b/aboutme.html
@@ -64,6 +64,22 @@
 <br><br>
         <div id="int1">
             <h1 id="int">Interests</h1>
+            <ul style="font-size: 24px;">
+                <li><strong>Philosophy</strong></li>
+                <li><strong>Coding</strong></li>
+                <li><strong>Physics</strong></li>
+                <li><strong>Psychology</strong></li>
+            </ul>
+            </div>
+        <div id="int1">
+                <h1 id="int">Hobbies</h1>
+                <ul style="font-size: 24px;">
+                    <li><strong>Writing</strong></li>
+                    <li><strong>Chess</strong></li>
+                    <li><strong>Drawing</strong></li>
+                    <li><strong>Theorising</strong></li>
+                </ul>
+        </div>
 
 </body>
 </html>
