--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <a href="aboutme.html">About-Me</a>
         <a href="contact.html">Connect</a>
     </div>
-</body>
     <div class="container">
         <div class="avatar-section">
             <img class="avatar" src="avatar.jpg" alt="Avatar">
@@ -23,5 +22,10 @@
             <p>I am pursuing<strong> B.Tech in Computer Science Engineering</strong></p>
             <p>Specialising in <strong>Artificial Intelligence and Machine Learning</strong></p>
         </div>
-       
+<div class="moreinfo">
+
+    
+</div>
+
+</body>
 </html>
