--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Portfolio</title>
-    <link rel="stylesheet" href="port.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="port.css"> 
 </head>
 <body>
     <div class="navbar">
@@ -19,7 +19,7 @@
                 <div class="skill">
                     <label for="python"><strong>Python</strong></label>
                     <div class="progress-container">
-                        <div class="pr" style="width: 90%;"></div>
+                        <div class="pr" style="width: 50%;"></div>
                         
                     </div>
                 </div>
@@ -28,7 +28,7 @@
                 <div class="skill">
                     <label for="html"><strong>HTML</strong></label>
                     <div class="progress-container">
-                        <div class="pr" style="width: 75%;"></div>
+                        <div class="pr" style="width: 65%;"></div>
                     </div>
                 </div>
             </li>
@@ -80,6 +80,15 @@
                     <li><strong>Theorising</strong></li>
                 </ul>
         </div>
-
+        <div id="int1">
+        <h1 id="int">Academic Prospects</h1>
+        <ul style="font-size: 24px;">
+            <li><strong>Research in:</strong></li>
+           <ol> 
+            <li><strong>AI and ML</strong></li>
+            <li><strong>Quantum Computing</strong></li>
+            <li><strong>String Theory</strong></li>
+        </ul>
+</div>
 </body>
 </html>
