--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <h1 class="moving-background">My Social Links</h1>
     
   <div style="margin-top: 50px;">
-     <img src="qr1.jpg" class="qr-c">
+     <img src="linkdinqr.jpg" class="qr-c">
      <a class="links" href="https://www.linkedin.com/in/samrath-thukral-625b001b9?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
      target="_blank" style="color: rgb(17, 12, 151);" ><b><u>LinkedIn</u></b></p>
    </div>
