--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
      target="_blank" style="color: rgb(17, 12, 151);" ><b><u>LinkedIn</u></b></p>
    </div>
    <div>
-        <img src="qr1.jpg" class="qr-c">
+        <img src="Github.png" class="qr-c">
         <a class="links" href="https://github.com/samrathos" target="_blank" style="color: rgb(25, 95, 13);"><b><u>Github</u></b></p>
     </div>
    <div>
