--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     skillset to work in the field of Data Science</p></h3>
             </div>
             <div id="div2">
-                <img style="border:  rgb(149, 255, 0);float:left;width: 200px;" src="DataScicerti.jpg">
+                <img style="border:  rgb(149, 255, 0);float:left;width: 200px;" src="DataScicerti.png">
                 <h3><p style="margin-left: 250px;padding-bottom:70px;color: black;margin-right: 40px;">Opted for this 
                     course to provide my Data Science 
                     journey a headstart 
