--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <div class="container">
         <div class="avatar-section">
-            <img class="avatar" src="mypic.jpg" alt="Avatar">
+            <img class="avatar" src="mypic2.jpg" alt="Avatar">
         </div>
         <div class="info-section">
             <h1>Welcome to My Portfolio!</h1>
